css/style.css
html {
  margin: 0;
  padding: 0;
  width: 1366px;
  background: url("../img/background-image.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: fixed;
}

.container {
  display: flex;
  align-items: center;
  text-align: center;
  margin-top: 50px;
}

body {
  width: 1072px;
  height: 100vh;
  margin: 0 auto;
}

a, p {
  text-decoration: none;
  color: white;
}

.logo img {
  width: 46px;
  height: 44px;
}

.logo {
  display: flex;
  text-transform: uppercase;
}

.inner-logo {
  padding-left: 15px;
}

header > .container {
  justify-content: space-between;
}

.main-text {
  font-size: 29px;
}

.sub-text {
  font-size: 18px;
}

.contacts {
  display: flex;
  flex-direction: column;
  gap: 5px;
  text-align: right;
  font-size: 18px;
}

main > .container {
  flex-wrap: wrap;
  gap: 0 68px;
}

figure img {
  width: 306px;
  height: 200px;
  border-width: 3px;
  border-style: solid;
  border-image: linear-gradient(180deg, white, black) 2;
}

figcaption {
  font-size: 18px;
  padding: 20px 0 36px 0;
}

footer > .container {
  margin: 0;
  padding: 25px 0 20px 0;
  justify-content: center;
  font-size: 18px;
}

